[Fix] Chat Inbox: Redundant the scrollbar of the browser

--- a/frontend/web/less/desktop/chat_inbox.less
+++ b/frontend/web/less/desktop/chat_inbox.less
@@ -157,30 +157,32 @@
 			}
 
 		}
-		ul {
-			margin: 0;
-			padding: 0;
-			// min-height: 500px;
+
+		#container_ul_chat_list {
 			height: 700px;
-			overflow: auto;
+			ul {
+				margin: 0;
+				padding: 0;
+				overflow: hidden;
+				li {
+					list-style-type: none;
+					padding: 10px 5px 10px 10px;
+					border-bottom: 1px solid #cccccc;
+				}
 
-			li {
-				list-style-type: none;
-				padding: 10px 5px 10px 10px;
-				border-bottom: 1px solid #cccccc;
-			}
-
-			li:hover {
-				cursor: pointer;
-				background-color: #fafafa;
-				.title-description-user {
-					.title-chat-inbox {
-						cursor: pointer;
-						color: #5da5d8;
+				li:hover {
+					cursor: pointer;
+					background-color: #fafafa;
+					.title-description-user {
+						.title-chat-inbox {
+							cursor: pointer;
+							color: #5da5d8;
+						}
 					}
 				}
 			}
 		}
+
 
 	}
 }
